// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagListPage in [page].tsx when there is content it renders the page 1`] = `
<DocumentFragment>
  <title>
    Tag Index Default Title (Page 1)
  </title>
  <meta
    content="Tag index default description."
    name="description"
  />
  <script
    data-testid="tag-list-schema"
    id="tag-list-schema"
    type="application/ld+json"
  >
    {"@context":"https://schema.org","@type":"ItemList","name":"Tag Index Default Title (Page 1)","description":"Tag index default description.","url":"https://test.recipes.pliddy.com","numberOfItems":2,"itemListElement":[{"@type":"ListItem","position":1,"name":"Tag 1 Title","url":"https://test.recipes.pliddy.com/tag/tag-1"},{"@type":"ListItem","position":2,"name":"Tag 2 Title","url":"https://test.recipes.pliddy.com/tag/tag-2"}]}
  </script>
</DocumentFragment>
`;

exports[`TagListPage in [page].tsx when there is no page parameter it renders the page 1`] = `
<DocumentFragment>
  <title>
    Tag Index Default Title (Page undefined)
  </title>
  <meta
    content="Tag index default description."
    name="description"
  />
  <script
    data-testid="tag-list-schema"
    id="tag-list-schema"
    type="application/ld+json"
  >
    {"@context":"https://schema.org","@type":"ItemList","name":"Tag Index Default Title (Page undefined)","description":"Tag index default description.","url":"https://test.recipes.pliddy.com","numberOfItems":2,"itemListElement":[{"@type":"ListItem","position":1,"name":"Tag 1 Title","url":"https://test.recipes.pliddy.com/tag/tag-1"},{"@type":"ListItem","position":2,"name":"Tag 2 Title","url":"https://test.recipes.pliddy.com/tag/tag-2"}]}
  </script>
</DocumentFragment>
`;
